# cuv

./: .gitmodules  README.md  pyproject.toml
scripts/: install-ninja.sh  install_all.sh  install_clang.sh  install_clang_scan_deps.sh  reinstall-ninja.sh
src/: __main__.py  cli.py
src/cuv/: cli.py  cmake_writer.py  dep_resolver.py  gen_compile_commands.py  new_project.py  ninja_writer.py  toml_parser.py
tests/: build_lib.sh
tests/local-project/: CMakeLists.txt  main.cpp
tests/toolchain/: toolchain.cmake
